# btensor

./: .buildinfo  NOTICE  README.md  basis.py  basisarray.py  genindex.html  index.html  introduction.html  links.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  requirements.txt  search.html  searchindex.js  tox.ini
.github/workflows/: ci.yml  publish.yml  sphinx.yml
_sources/: introduction.rst.txt  links.rst.txt  quickstart.rst.txt
api/: index.html
api/_autosummary/: btensor.basis.Basis.__init__.html  btensor.basis.Basis.get_by_id.html  btensor.basis.Basis.get_common_parent.html  btensor.basis.Basis.get_overlap.html  btensor.basis.Basis.get_parents.html  btensor.basis.Basis.get_transformation.html  btensor.basis.Basis.get_transformation_from.html  btensor.basis.Basis.get_transformation_to.html  btensor.basis.Basis.html  btensor.basis.Basis.is_compatible_with.html  btensor.basis.Basis.is_derived_from.html  btensor.basis.Basis.is_parent_of.html  btensor.basis.Basis.is_root.html  btensor.basis.Basis.make_intersect_basis.html  btensor.basis.Basis.make_subbasis.html  btensor.basis.Basis.make_union_basis.html  btensor.basis.Basis.same_root.html  btensor.basis.compatible_basis.html  btensor.basis.get_common_parent.html  btensor.basis.html  btensor.dot.html  btensor.einsum.html  btensor.tensor.Cotensor.html  btensor.tensor.Tensor.__init__.html  btensor.tensor.Tensor.change_basis.html  btensor.tensor.Tensor.change_basis_at.html  btensor.tensor.Tensor.change_variance.html  btensor.tensor.Tensor.change_variance_at.html  btensor.tensor.Tensor.copy.html  btensor.tensor.Tensor.dot.html  btensor.tensor.Tensor.get_common_basis.html  btensor.tensor.Tensor.html  btensor.tensor.Tensor.is_compatible.html  btensor.tensor.Tensor.project.html  btensor.tensor.Tensor.replace_basis.html  btensor.tensor.Tensor.replace_variance.html  btensor.tensor.Tensor.sum.html  btensor.tensor.Tensor.to_numpy.html  btensor.tensor.Tensor.trace.html  btensor.tensor.Tensor.transpose.html  (+1 more)
basis_array/: __init__.py  array.py  basis.py  einsum.py  optemplate.py  space.py  tensor.py  util.py
basis_array/functions/: __init__.py  dot.py  einsum.py
basis_array/numpy_functions/: __init__.py  core.py  einsum.py
basis_array/util/: __init__.py  matrix.py  util.py
btensor/: __init__.py  array.py  basis.py  basistuple.py  space.py  tensor.py  tensorsum.py
btensor/core/: __init__.py  array.py  basis.py  basistuple.py  optemplate.py  space.py  tensor.py
btensor/decomp/: __init__.py  hosvd.py
btensor/numpy_functions/: __init__.py  core.py  einsum.py
btensor/util/: __init__.py  matrix.py  util.py
doc/: conf.py  index.rst  links.rst  motivation.rst  quickstart.rst
docs/: conf.py  index.rst  quickstart.rst  requirements.txt
docs/source/: conf.py  (+3 more)
examples/: 01-simple-2d.py  02-derived-basis.py  02-matrix-2d.py  02-matrix.py  03-2d-tensor.py  03-matrix.py  09-example-for-pyscf-user.py  simple-2d.py
tests/: conftest.py  helper.py  test_array.py  test_basis.py  test_basistuple.py  test_decomp.py  test_einsum.py  test_examples.py  test_mpi.py  test_numpy.py  test_numpy_functions.py  test_pyscf.py  test_tensor.py  test_tensorsum.py  test_util.py  testing.py
(+78 files in other folders)
