[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "BTensor"
version = "1.1.1"
authors = [
  { name="Max Nusspickel", email="max.nusspickel@gmail.com" },
]
description = "A library for basis transformation of tensors"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.1.0",
]

[project.urls]
source = "https://github.com/maxnus/btensor"

[tools.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tools.setuptools.dynamic]
version = {attr = "btensor.__version__"}

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "tests"

[tool.ruff]
line-length = 120
