[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "BTensor"
authors = [
  { name="Max Nusspickel", email="max.nusspickel@gmail.com" },
]
description = "A library for basis transformation of tensors"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[project.urls]
source = "https://github.com/maxnus/btensor"

[tool.hatch.version]
path = "src/btensor/__about__.py"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "tests"

[tool.ruff]
line-length = 120
